number spacing in interval component fixed to match others

--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,7 @@ select {
 
 .hide {
   visibility: hidden;
+  font-size: 24px;
 }
 
 
